--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,8 +1,17 @@
+*{
+    box-sizing: unset;
+}
+
 body{
     margin: 0;
     padding: 0;
     font-family: "Encode Sans", sans-serif;
     background-color: #111;    
+}
+
+#text{
+    width: 0;
+    height: 0;
 }
 
 .promo{
@@ -63,16 +72,16 @@ body{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 380px;
+    width: 30%;
     height: 90px;    
 }
-.change_button{
-    width: 38px;
+.change_int a{
+    width: 10%;
     height: 2px;
     background-color: #414141;
 }
-.button_on{
-    width: 38px;
+
+.button_on{    
     height: 2px;
     background-color: #dd1f26;
 }
@@ -99,7 +108,9 @@ body{
 
 
 
-
+#menu_mobile{
+    display: none;
+}
 header{
     width: 100%;
     height: 100px;
@@ -108,7 +119,7 @@ header{
     justify-content: center;
     align-items: center;    
 }
-.header_int{
+.header_int{    
     width: 100%;
     max-width: 1225px;
     height: 100px;
@@ -116,7 +127,7 @@ header{
     justify-content: space-between;
     align-items: center;
 }
-.header_int img{
+.logo{
     width: 190px;
     height: 40px;
 }
@@ -165,14 +176,14 @@ nav{
     width: 45%;
 }
 
-.nav_search{
+form{
     margin-left: -15px;
     display: flex;
     justify-content: space-between;
     align-items: center;    
     width: 72%;
 }
-.nav_search input{
+form #search{
     padding-left: 20px;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -182,13 +193,16 @@ nav{
     border-radius: 5px;
     color: #FFF;
 }
-.nav_search input:focus, input:focus, select:focus {
+form #search:focus, input:focus, select:focus {
     outline: 0;
 }
 
-.nav_search img{
+.lupa_desktop{
     width: 18px;
     height: 18px;    
+}
+.lupa_mobile{
+    display: none;
 }
 
 .nav_contato img{
@@ -222,6 +236,7 @@ nav{
     display: none;
 }
 
+
 @media only screen and (min-width: 1000px) and (max-width: 1225px){    
     .promo_int{
         width: 734px;
@@ -241,7 +256,7 @@ nav{
     .header_int{
         max-width: 1000px;
     }
-    .header_int img{
+    .logo{
         width: 170px;
         height: 35.7px;
     }
@@ -251,20 +266,25 @@ nav{
     .nav_link_right{
         width: 39%;
     }
-    .nav_search{
+    form{
         width: 60%;
         margin-left: 0px;
     }
-    .nav_search input{
+
+
+    form #search{
+        font-size: 12px;
         margin-right: 3px;
         padding-left: 10px;
     }
-    .nav_search img{
+    .lupa_desktop{
         width: 18px;
         height: 18px;
-    }
+    }    
+
+
     .nav_prod{
-        width: 70%;
+        width: 63%;
         max-width: 503px;
     }
     .nav_prod_int{
@@ -311,7 +331,7 @@ nav{
     .header_int{
         max-width: 768px;
     }
-    .header_int img{
+    .logo{
         width: 160px;
         height: 33.6px;
     }
@@ -332,10 +352,10 @@ nav{
     nav{
         width: 75%;
     }
-    .nav_search input{
+    form #search{
         display: none;        
     }
-    .nav_search{
+    form{
         width: 18px;
     }
     .nav_prod{
@@ -374,22 +394,18 @@ nav{
         padding-left: 10px;
         padding-right: 10px;        
         border-radius: 2px;
-    }    
-    .nav_search img{
-        width: 18px;
-        height: 18px;    
-    }
+    }        
 
 }
 
-@media only screen and (max-width: 769px){        
+@media only screen and (min-width: 755px) and (max-width: 769px){        
     .promo_int{
         width: 564px;
     }
     .header_int{
         max-width: 760px;
     }
-    .header_int img{
+    .logo{
         width: 160px;
         height: 33.6px;
     }
@@ -410,10 +426,10 @@ nav{
     nav{
         width: 75%;
     }
-    .nav_search input{
+    form #search{
         display: none;        
     }
-    .nav_search{
+    form{
         width: 18px;
     }
     .nav_prod{
@@ -453,12 +469,131 @@ nav{
         padding-right: 10px;        
         border-radius: 2px;
     }    
-    .nav_search img{
+    .lupa_desktop{
         width: 18px;
         height: 18px;    
     }
     
 }
+
+@media only screen and (max-width: 755px){
+    header{
+        background-color: #000;
+        height: 50px;
+    }
+    .promo{
+        display: none;
+    }
+    .header_int{
+        display: none;
+    }
+    #menu_mobile{
+        display: block;
+    }
+
+    #left_side_mobile{
+        display: flex;
+        align-items: center;
+    }
+    .icon_mobile{
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+        width: 30px;
+        height: 30px;
+    }
+    .icon_parts{
+        background-color: #FFF;
+        width: 30px;
+        height: 3px;
+        margin-left: 10px;
+    }
+
+    .logo_mobile{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #right_side_mobile{
+        display: flex;  
+        justify-content: flex-end;
+        align-items: center;      
+    }    
+    .img_lupa_img{
+        width: 30px;
+        height: 30px;
+        padding-right: 10px;        
+    }
+
+    .col-1, .col-2, .col-6, .col-10, .col-11, .col-sm-1, .col-sm-2, .col-sm-6, .col-sm-8, .col-sm-11{
+        padding: 0;
+    }
+
+    .banner{
+        margin-top: 0px;        
+    }
+    .banner img,
+    .banner{
+        height: 200px;
+    }
+
+    .change_int{
+        width: 50%;
+    }
+    .change{        
+        margin-top: 200px;
+    }
+    .seta{                
+        height: 200px;
+        margin-top: -290px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+
+    #menu_open_mobile{                        
+        position: fixed;
+        margin-top: -50px;
+    }
+
+    .linha_menu{
+        background-color: rgb(26, 26, 26);
+        color: #FFF;
+    }
+
+    .menu_open_login{
+        font-size: 15px;
+    }
+    .menu_open_login a{
+        color: #dd1f26;
+        text-decoration: underline;
+    }
+
+    #menu_open_first{
+        margin: 0;        
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;        
+    }
+    .menu_second_img{
+        display: flex;
+        flex-direction: column;
+        align-items: center;        
+    }
+    hr{
+        border-top: 1px solid #FFF;
+    }
+    .menu_third_img{
+        display: flex;
+        justify-content: flex-start;
+    }
+}
+
+
+
+
+
+
 
 
 
