--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -233,6 +233,7 @@ form #search:focus, input:focus, select:focus {
 .close_search{
     width: 18px;
     height: 18px;
+    cursor: pointer;
 }
 .menu_search_all{
     display: none;
@@ -253,6 +254,9 @@ form #search:focus, input:focus, select:focus {
     justify-content: center;
     align-items: center;
 }
+.close{
+    cursor: pointer;
+}
 
 .lupa_desktop{
     width: 18px;
@@ -260,6 +264,7 @@ form #search:focus, input:focus, select:focus {
 }
 .lupa_mobile{
     display: none;
+    cursor: pointer;
 }
 
 .nav_contato img{
@@ -292,29 +297,6 @@ form #search:focus, input:focus, select:focus {
     height: 220px;
     background-color: #111;
     display: none;
-}
-.link_pc{
-    display: flex;
-    justify-content: center;
-    max-width: 100%;
-    height: 100%;
-}
-.link_pc_int{    
-    width: 100%;
-    max-width: 1225px;    
-    height: 54%;
-    display: none;
-    justify-content: space-around;
-    align-items: flex-end;
-}
-.pc_link{
-    border-radius: 3px;
-    width: 8%;
-    height: 90px;
-    background-color: red;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 .placa_video_opt{
@@ -359,6 +341,7 @@ form #search:focus, input:focus, select:focus {
 .processador_opt,
 .memoria_opt,
 .ssd_opt{            
+    cursor: pointer;
     background-repeat: no-repeat;               
     background-color: #272727; 
     border: 2px solid #3a3838;
@@ -727,6 +710,7 @@ form #search:focus, input:focus, select:focus {
         justify-content: space-around;
         width: 30px;
         height: 30px;
+        cursor: pointer;
     }
     .icon_parts{
         background-color: #FFF;
